# mlm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: app.py  model.onnx
data/processed/: train.csv  val.csv
data/raw/: README.MD
fine_tuning/: __init__.py  config.py  dataset.py  features.py  plots.py
fine_tuning/modeling/: predict.py  train.py
notebooks/: Untitled.ipynb
